change min-stability on dev

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
       "email": "poltava28704@gmail.com"
     }
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "require": {
     "php": ">=5.6.0"
   },
