--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   },
   "version": "1.0.2",
   "extra": {
-    "laravel": {
+    "laravel-widgets": {
       "providers": [
         "Peroln\\Widgets\\WidgetServiceProvider"
       ]
